@@ -1,6 +1,7 @@
 package ru.otus.hw.services;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.prepost.PostFilter;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -13,6 +14,12 @@ import ru.otus.hw.repositories.CommentRepository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
+import static org.springframework.security.acls.domain.BasePermission.READ;
+import static org.springframework.security.acls.domain.BasePermission.WRITE;
+import static org.springframework.security.acls.domain.BasePermission.DELETE;
+import static org.springframework.security.acls.domain.BasePermission.ADMINISTRATION;
 
 @RequiredArgsConstructor
 @Service
@@ -23,8 +30,11 @@ public class CommentServiceImpl implements CommentService {
 
     private final CommentMapper commentMapper;
 
+    private final AclServiceWrapperService aclServiceWrapperService;
+
     @Override
     @Transactional(readOnly = true)
+    @PreAuthorize("hasPermission(#id, 'ru.otus.hw.dto.CommentDto', 'READ')")
     public Optional<CommentDto> findById(long id) {
         return commentRepository.findById(id)
                 .map(commentMapper::toCommentDto);
@@ -32,24 +42,33 @@ public class CommentServiceImpl implements CommentService {
 
     @Override
     @Transactional(readOnly = true)
+    @PostFilter("hasPermission(filterObject, 'READ')")
     public List<CommentDto> findAllCommentsByBookId(long bookId) {
         return commentRepository.findByBookId(bookId).stream()
-                .map(commentMapper::toCommentDto).toList();
+                .map(commentMapper::toCommentDto).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    @PreAuthorize("hasAnyRole('ADMIN', 'PUBLISHER', 'USER')")
+    @PreAuthorize("hasAnyAuthority('ROLE_ADMIN', 'ROLE_USER')")
     public CommentDto insert(String text, long bookId) {
-        return save(0L, text, bookId);
+        var commentDto = save(0L, text, bookId);
+        aclServiceWrapperService.createPermissions(commentDto, READ, WRITE, DELETE, ADMINISTRATION);
+        return commentDto;
     }
 
     @Override
     @Transactional
-    //todo Добавить: Пользователь может редактровать свои комментарии
-    @PreAuthorize("hasAnyRole('ADMIN', 'PUBLISHER')")
+    @PreAuthorize("hasPermission(#id, 'ru.otus.hw.dto.CommentDto', 'WRITE')")
     public CommentDto update(long id, String text, long bookId) {
         return save(id, text, bookId);
+    }
+
+    @Override
+    @Transactional
+    @PreAuthorize("hasPermission(#id, 'ru.otus.hw.dto.CommentDto', 'DELETE')")
+    public void deleteById(long id) {
+        commentRepository.deleteById(id);
     }
 
     private CommentDto save(long id, String text, long bookId) {
@@ -60,12 +79,4 @@ public class CommentServiceImpl implements CommentService {
         );
     }
 
-
-    @Override
-    @Transactional
-    //todo ДОбвавить: Пользователь может удалять свои комментарии
-    @PreAuthorize("hasAnyRole('ADMIN'")
-    public void deleteById(long id) {
-        commentRepository.deleteById(id);
-    }
 }
